@@ -7448,4 +7448,5 @@ EPRINTS-3.1-beta-2
 
 2008-05-13 tdb
  * Removed deprecated methods: make_buffer, garbage_collect, dispose_buffer, from_buffer, install_table
+ * Check tables exist before attempting to create them when creating dataset tables (allows update_database_structure to "fill in the gaps")
 
